feat: workshop token to load public data
